--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.netology</groupId>
-    <artifactId>Afisha</artifactId>
+    <artifactId>ThingManager</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
@@ -36,7 +36,6 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
 
     <build>
         <plugins>
